# desktop-rag-app

./: .gitignore  README.md  electron-builder.yml  index.html  manual.html  package-lock.json  package.json  vite.config.cjs
demo-kb/: data_ops.md  flow.md  model.md
docs/: architecture.md  e2e_demo_report.md  offline_assets_check_latest.json  offline_bundle_delivery_report_2026-02-17.md  phase_123_execution_report_2026-02-17.md  qdrant_ui_plan_2026-02-17.md  rag_optimization_review_2026-02-16.md  smoke_report.md  smoke_report_offline_bundle_latest.md  smoke_report_offline_bundle_latest2.md  smoke_report_offline_bundle_simulated_clean.md  smoke_timeout_240.md  (+16 more)
rag-core/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
rag-core/docs/: eval_report_latest.json  eval_report_latest.md  eval_report_llm_score.json  eval_report_llm_score.md  eval_report_none.json  eval_report_none.md  eval_set_sample.jsonl  local_ollama_test_results.md  plan_analysis.md  stage2_rag_optimization_summary_2026-02-16.md  test_output.txt  test_report.md  workflow.md
rag-core/knowledge/: README.md  local_deploy.md
rag-core/knowledge_bases/: knowledge_registry.json
rag-core/knowledge_bases/default/: 00_local_rag_flow.md  01_data_load_unload.md  02_doctor_notes.md  README.md
rag-core/scripts/: eval_rag.py  mdrag.ps1  run_regression.ps1
rag-core/src/mdrag/: __init__.py  chunking.py  cli.py  config.py  loader.py  models.py  ollama_client.py  pipeline.py  qdrant_store.py  vector_store.py
rag-core/tests/: test_chunking.py  test_cli.py  test_pipeline.py  test_vector_store.py
(+57 files in other folders)
